# Streamlined-NTRU-Prime

./: .travis.yml  Cargo.toml  License-MIT.md  readme.md
benches/: mod.rs
src/: lib.rs  readme.md
src/r3/: mod.rs  mod3.rs  vector.rs
src/rq/: encoding.rs  mod.rs  modq.rs  vector.rs
src/tests/: kat-generator.sage  kat.json
src/zx/: encoding.rs  mod.rs  random.rs
tests/: kat-generator.sage  kat.json  lib.rs  mod.rs
