[package]
name = "streamlined-ntru-prime"
version = "0.1.1"
authors = ["MitchellBerry <mitchellberry@protonmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "hashing", "bcrypt", "post-quantum"]
description = "Rust implementation of the Streamline NTRU Prime algorithm" 
repository = "https://github.com/MitchellBerry/streamlined-ntru-prime"
documentation = "https://docs.rs/crate/streamlined-ntru-prime/0.1.1"
categories = ["algorithms", "cryptography"]
readme = "readme.md"

[dependencies]
rand = "0.6.0"
sha2 = "0.8.0"
hex = {version = "0.3.2", optional = true}
serde = {version = "1.0.80", optional = true}
serde_json = {version = "1.0.33", optional = true}
serde_derive = {version = "1.0.80", optional = true}

[features]
default = []
testing = ["serde", "serde_json", "serde_derive", "hex"]